# backend

./: .env.example  .gitignore  pyproject.toml
backend/: UserModel.py  doctors.py  interaction.py  main.py  patient.py  testModels.py  test_models.py
backend/core/: constants.py  firebase.py  llm.py  pool.py  utils.py
backend/handlers/: before_request.py
backend/models/: chat.py  doctor.py  interaction.py  organization.py  patient.py  user.py
backend/routes/: chat.py  routes.py
