[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Yogesh Aggarwal <yogeshdevaggarwal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
firebase-admin = "^6.5.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
