[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Yogesh Aggarwal <yogeshdevaggarwal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
firebase-admin = "^6.5.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
flask-cors = "^4.0.1"
ibm-watson = "^8.1.0"
ibm-cloud-sdk-core = "^3.20.6"
nanoid = "^2.0.0"

[tool.poetry.scripts]
dev = "backend.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
